--- a/styles/sections/_collaboration.scss
+++ b/styles/sections/_collaboration.scss
@@ -57,7 +57,7 @@
 		padding: 13.5rem 5.1rem;
 
 		@media (max-width: 768px) {
-			padding: 8rem 5.1rem;
+			padding: 4rem 5.1rem 8rem;
 		}
 
 		&_slider {
@@ -95,6 +95,10 @@
 			text-align: center;
 			font-family: $f-title;
 			font-size: 4.8rem;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 11.4rem;
 		}
 
 		&_title {
