--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -58,6 +58,7 @@
 		height: 100dvh;
 		background-color: rgba($c-darkblue, 0.8);
 		backdrop-filter: blur(2.5rem);
+		transform: translate3d(0, 0, 0);
 
 		animation: dropdown 0.5s ease;
 
